--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Untitled Document</title>
-        <script src="./jss.php?jss=hello.js,2.js"></script>
+        <script src="./jss.php?files=hello.js,2.js"></script>
     </head>
     
     <body>
